--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <p>I'm currently open to new opportunities. Feel free to connect!</p>
         <a href="devs04425@gmail.com" class="btn contact-btn">Email Me</a>
         <div class="social-links">
-            <a href="www.linkedin.com/in/dev-sharma-0a3022316" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/dev-sharma-0a3022316/" target="_blank"><i class="fab fa-linkedin"></i></a>
             <a href="https://github.com/devs00123" target="_blank"><i class="fab fa-github"></i></a>
             <a href="your_resume.pdf" target="_blank"><i class="fas fa-file-alt"></i> Resume</a>
         </div>
